--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -1,14 +1,16 @@
 
 <div class="row">
 	<div ng-class="{'col-lg-3': !oculto, 'col-md-4': !oculto, 'col-sm-4': !oculto, 'hidden': oculto}" class="left animated">
-		<organismos otitle="'Organismos con cartas de compromisos'" arbol="arbol" tipoelementos="'carta de compromisos'" attr="'numcartas'" setseleccionado="setSeleccionado" seleccionado="seleccionado" filtro="filtro"></organismos>
+		<organismos otitle="'Organismos con cartas de compromisos'" arbol="arbol" tipoelementos="'carta de compromisos'" attr="'numcartas'" setseleccionado="goToJerarquia" seleccionado="seleccionado" filtro="filtro"></organismos>
 	</div>
-	<div ng-class="{'col-lg-9': !oculto, 'col-md-8': !oculto, 'col-sm-8': !oculto, 'col-lg-12': oculto}" class="right animated" id="detallesjerarquia">
-		<div ng-click="oculto=!oculto" style="cursor:ew-resize">
-			<span class="glyphicon glyphicon-fullscreen pull-right">
-			</span>
-			<h2>{{seleccionado.title}}</h2>
+	<div ng-class="{'col-lg-9': !oculto, 'col-md-8': !oculto, 'col-sm-8': !oculto, 'col-lg-11': oculto}" class="right animated" id="detallesjerarquia">
+		<div class="pull-left" ng-click="oculto=!oculto" style="cursor:ew-resize; margin-right:1em">
+			<br />
+			<div class="btn btn-default">
+				<i class="fa fa-bars"></i>
+			</div>
 		</div>
+		<h2>{{seleccionado.title}}</h2>
 
 		<div ng-if="cartasservicio.length" class="table-responsive">
 			<p>
@@ -19,11 +21,11 @@
 					<a class="btn btn-default" target="_blank" href="{{cartaservicioseleccionada.url}}" title="Ver informaci&oacute;n publicada"><span class="glyphicon glyphicon-info-sign"></span></a>
 					<a class="btn btn-default" ng-click="mutexFormulas()" title="Ver f&oacute;rmulas"><span class="fa" ng-class="{'fa-toggle-on': showformulas, 'fa-toggle-off': !showformulas}"></span></a>
 					<div class="btn-group">
-					  <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						{{cartaservicioseleccionada.denominacion}} <span class="caret" ng-if="cartasservicio.length > 1"></span>
-					  </button>
+						</button>
 						<ul class="dropdown-menu" ng-if="cartasservicio.length > 1">
-							<li ng-if="cartaservicioseleccionada._id != c._id" ng-repeat="c in cartasservicio"><a href="{{c.urledicion}}">{{c.denominacion}}</a></li>
+							<li ng-if="cartaservicioseleccionada._id != c._id" ng-repeat="c in cartasservicio"><a href="{{c.urledicion}}">{{c.expediente}} {{c.denominacion}}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -103,7 +105,7 @@
 															<input ng-blur="updateIndicador(indicadorid)" type="text" style="width:3em; font-size:smaller; padding:1px" class="text-right form-control" ng-model="indicadores[indicadorid].valores[aanualidad][v]" />
 														</td>
 													</tr>
-													<tr ng-repeat-end ng-if="indicadores[indicadorid].desplegado">
+													<tr ng-repeat-end ng-show="indicadores[indicadorid].desplegado">
 														<td colspan="14">
 															<table class="table table-striped table-bordered table-condensed" style="width:100%">
 																<tbody>
@@ -119,7 +121,7 @@
 											</table>
 										</td>
 										<td style="text-align:center">
-											<div width="10em" ng-radial-gauge ranges="formula.intervalos" value="mini(formula.valor[aanualidad], formula.meta)" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.meta"></div>
+											<div width="10em" ng-radial-gauge ranges="formula.intervalos" value="formula.valor[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.meta"></div>
 											<!--
 											<canvas data-gauge-chart maxvalue="100" dato="gaugeChart[objetivo.i].data" value="gaugeChart[objetivo.i].data.val" data-options="gaugeChart[objetivo.i].options" style="width: 120px; height: 60px; " class=""></canvas>
 											{{gaugeChart[objetivo.i].data.val}}
