Review activity log and many other features

--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -129,7 +129,7 @@
 											</table>
 										</td>
 										<td style="text-align:center">
-											<div width="10em" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.valor[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue"></div>
+											<div width="10em" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.gaugevalue[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue"></div>
 											<!--
 											<canvas data-gauge-chart maxvalue="100" dato="gaugeChart[objetivo.i].data" value="gaugeChart[objetivo.i].data.val" data-options="gaugeChart[objetivo.i].options" style="width: 120px; height: 60px; " class=""></canvas>
 											{{gaugeChart[objetivo.i].data.val}}
