--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -89,7 +89,7 @@
 													</tr>
 													<tr>
 														<th>Cálculo</th>
-														<th class="text-right" title="{{valor.formula}}" ng-style="bgColorResultado(valor.resultado, formula)" ng-repeat="valor in formula.valores[aanualidad] track by $index">{{valor.resultado |number:0}}</th>
+														<th class="text-right" title="{{valor.formula}}" ng-style="bgColorResultado(valor.resultado, formula)" ng-repeat="valor in formula.valores[aanualidad] track by $index">{{valor.resultado|number:(formula.indicadores.length > 1 ? 2 : 0)}}</th>
 													</tr>
 												</tfoot>
 												<tbody>
@@ -98,7 +98,7 @@
 															<div class="pull-right">
 																<a ng-If="!!$root.permisoscalculados.superuser" title="Editar" href="/indicador/{{idjerarquia}}/{{indicadorid}}"><i class="fa fa-pencil"></i></a>
 																<!--<a title="Desvincular" href=""><i class="fa fa-unlink text-danger"></i></a>-->
-																<span class="glyphicon glyphicon-comment" ng-click="indicadores[indicadorid].desplegado = !indicadores[indicadorid].desplegado" ng-class="{'color_note' : existeComentario(indicadores[indicadorid].observaciones[aanualidad])}"></span>
+																<span class="glyphicon glyphicon-comment" ng-click="indicadores[indicadorid].desplegado = !indicadores[indicadorid].desplegado" ng-class="{'color_note': existeComentario(indicadores[indicadorid].observaciones[aanualidad])}"></span>
 															</div>
 															{{indicadores[indicadorid].nombre}}
 														</td>
@@ -129,14 +129,14 @@
 											</table>
 										</td>
 										<td style="text-align:center">
-											<div width="10em" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.gaugevalue[aanualidad]" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue"></div>
+											<div width="10em" major-graduations="{{formula.uppervalue < 5 ? formula.uppervalue + 1 : 5}}" ng-radial-gauge ranges="formula.intervalos" value="formula.gaugevalue ? formula.gaugevalue[aanualidad] : 0" value-unit="unit" precision="precision" lower-limit="0" upper-limit="formula.uppervalue"></div>
 											<!--
 											<canvas data-gauge-chart maxvalue="100" dato="gaugeChart[objetivo.i].data" value="gaugeChart[objetivo.i].data.val" data-options="gaugeChart[objetivo.i].options" style="width: 120px; height: 60px; " class=""></canvas>
 											{{gaugeChart[objetivo.i].data.val}}
 											-->
 											<br />
 											<br />
-											<h4>{{ formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado.toFixed(0)  }}</h4>
+											<h4>{{ formula.valores[aanualidad][ formula.valores[aanualidad].length - 1 ].resultado | number:(formula.indicadores.length > 1 ? 2 : 0)  }}</h4>
 											<h4 style="color:red" ng-show="showformulas">{{formula.valor[aanualidad]}}</h4>
 											<h5>{{ formula.meta }}</h5>
 										</td>
