--- a/public/partials/registroactividad.html
+++ b/public/partials/registroactividad.html
@@ -3,7 +3,7 @@
 	<table class="table table-striped table-bordered table-condensed table-hover">
 		<thead>
 			<tr>
-				<th ng-class="{danger:orderby=='usr' }" ng-click="reverse=!reverse;orderby='usr'">USR</th>
+				<th ng-class="{danger:orderby=='usr' }" ng-click="reverse=!reverse;orderby='usr'">Usuario</th>
 				<th ng-class="{danger:orderby=='fecha' }" ng-click="reverse=!reverse;orderby='fecha'">Fecha</th>
 				<th ng-class="{danger:orderby=='url' }" ng-click="reverse=!reverse;orderby='url'">URL</th>
 				<th>Headers</th>
@@ -29,9 +29,9 @@
 				</td>
 		</tfoot>
 		<tbody>
-			<tr ng-repeat="registro in registros">
-				<th>{{registro.usr}}</th>
-				<td>{{registro.fecha | date:'dd-MM-yyyy HH:mm'}}</td>
+			<tr ng-repeat="registro in registros" ng-style="{'background-color': getPastel(registro.usr) }">
+				<th class="text-center">{{registro.usr}}</th>
+				<td class="text-center">{{registro.fecha | date:'dd-MM-yyyy HH:mm'}}</td>
 				<td style="max-width:200px;overflow:hidden;text-overflow: ellipsis;">{{registro.url}}</td>
 				<td class="text-center"><span class="cursor glyphicon glyphicon-zoom-in" ng-click="show(registro.req.headers)"></span></td>
 				<td class="text-center"><span class="cursor glyphicon glyphicon-zoom-in" ng-if="registro.req.body" ng-click="show(registro.req.body)"></span></td>
