updated CAS url

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -16,7 +16,7 @@
 			<p>Es necesario autenticarse vía servicio de autenticación CAS de la CARM. Para ello pulse en el botón de debajo, autentíquese y será redirigido otra vez a esta página. Pulse de nuevo en el botón y accederá al sistema.</p>
 			<p>
 				Si hubiera algún problema de autenticación es posible que deba cerrar la sesión usando este
-				<a target="_blank" href="https://sso.carmpru.es/jsso/logout">enlace</a>.
+				<a target="_blank" href="https://sso.carm.es/jsso/logout">enlace</a>.
 			</p>
 			<div>
 				<button ng-click="login(credentials)" style="text-align: center" class="topcoat-button full text-center">Entrar</button>
