--- a/public/partials/carta-informeanual.html
+++ b/public/partials/carta-informeanual.html
@@ -29,6 +29,9 @@
 				{{cartaservicio.url}}
 			</div>
 		</div>
+		<pre>
+		{{jerarquias | json}}
+		</pre>
 		<div class="row">
 			<div class="col-xs-12">
 				<form>
