--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-lg-12">
+	<div class="col-md-12">
 		<h3 class="text-center">{{meses[mesActual]}} - {{anyoActual}}</h3>
 		<div ng-repeat="indicador in indicadores" class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 			<a href="/stats" ng-class="{ '{{indicador.bg}}' : true }" class="dashboard-stat dashboard-stat-light">
@@ -59,6 +59,66 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="col-md-12 col-sm-12 col-lg-12">
+		<div class="col-sm-12 col-md-6 col-lg-6">
+		</div>
+		<div class="col-sm-6 col-md-2 col-lg-2">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Usuario
+				</div>
+				<div class="panel-body">
+					<ul style="list-style: none">
+					<li><strong>Usuario:</strong> {{$root.session.login}}</li>
+					<li><strong>Nombre:</strong> {{$root.session.nombre}}</li>
+					<li><strong>Apellidos:</strong> {{$root.session.apellidos}}</li>
+					<li ng-show="$root.session.codplaza"><strong>Código de plaza:</strong> {{$root.session.codplaza}}</li>
+				</ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-4 col-lg-4">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Permisos concedidos
+				</div>
+				<div class="panel-body">
+					<ul>
+						<li ng-repeat="permiso in $root.session.permisos">
+							<strong>Comentario:</strong> {{permiso.descripcion}}
+							<ul>
+								<li ng-show="permiso.login">Asignado por ser usuario con login: {{permiso.login}}.</li>
+								<li ng-show="permiso.codplaza">Asignado por ser usuario con login: {{permiso.codplaza}}.</li>
+								<li class="label label-default" ng-show="$root.permisoscalculados.superuser">Su usuario tiene capacidades de administrador.</li>
+								<li ng-show="permiso.entidadobjetodirectaescritura.length > 0">
+								Tiene permiso de escritura sobre
+									<span ng-show="permiso.entidadobjetodirectaescritura.length === 1">la carta</span>
+									<span ng-show="permiso.entidadobjetodirectaescritura.length > 1">las cartas</span>
+									de servicio {{permiso.entidadobjetodirectaescritura}}.
+								</li>
+								<li ng-show="permiso.jerarquiadirectalectura.length > 0">
+								Tiene permiso de lectura sobre
+									<span ng-show="permiso.jerarquiadirectalectura.length === 1">el nodo</span>
+									<span ng-show="permiso.jerarquiadirectalectura.length > 1">los nodos</span>
+									{{permiso.jerarquiadirectalectura}} y sus descendientes.
+								</li>
+								<li ng-show="permiso.jerarquiadirectaescritura.length > 0">
+								Tiene permiso de escritura sobre
+									<span ng-show="permiso.jerarquiadirectaescritura.length === 1">el nodo</span>
+									<span ng-show="permiso.jerarquiadirectaescritura.length > 1">los nodos</span>
+									{{permiso.jerarquiadirectaescritura}} y sus descendientes.
+								</li>
+								<li ng-show="permiso.grantoption">Puede ceder este permiso a otros usuarios.</li>
+								<li ng-show="!permiso.grantoption">No puede ceder este permiso a otros usuarios.</li>
+								<li ng-show="permiso.caducidad">Este permiso caduca a fecha {{permiso.caducidad}}</li>
+							</ul>
+						</li>
+					</ul>
+					* Los identificadores de jerarquía utilizados son los facilitados por la CARM.
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-		
