--- a/public/partials/carta.html
+++ b/public/partials/carta.html
@@ -22,7 +22,7 @@
 					</a>
 					<a class="btn btn-default" target="_blank" href="{{cartaservicioseleccionada.url}}" title="Ver informaci&oacute;n publicada"><span class="glyphicon glyphicon-info-sign"></span></a>
 					<a class="btn btn-default" target="_blank" href="{{cartaservicioseleccionada.urlprintable}}" title="Ver versi&oacute;n imprimible"><span class="glyphicon glyphicon-print"></span></a>
-					<a class="btn btn-default" href="#" ng-click="downloadDocx()" title="Descargar versi&oacute;n docx"><span class="glyphicon glyphicon-floppy-save"></span></a>
+					<a class="btn btn-default" target="_blank" href="/carta-informe/{{seleccionado.id}}/{{cartaservicioseleccionada._id}}/{{anualidad}}" title="Ver planes de mejora"><span class="glyphicon glyphicon-check"></span></a>
 					<a class="btn btn-default" ng-click="mutexFormulas()" title="Ver f&oacute;rmulas"><span class="fa" ng-class="{'fa-toggle-on': showformulas, 'fa-toggle-off': !showformulas}"></span></a>
 					<div class="btn-group">
 						<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -125,14 +125,25 @@
 															{{indicadores[indicadorid].nombre}}
 														</td>
 														<td ng-repeat="(v,a) in indicadores[indicadorid].valores[aanualidad] track by $index" style="white-space:nowrap" class="text-center">
-															<input ng-hide="$index == indicadores[indicadorid].valores[aanualidad].length - 1" ng-blur="updateIndicador(indicadorid)" type="text" style="width:3em; font-size:smaller; padding:1px; min-width:100%" class="text-right form-control" ng-model="indicadores[indicadorid].valores[aanualidad][v]" />
-															<span ng-if="$index == indicadores[indicadorid].valores[aanualidad].length - 1">
-																<span ng-show="indicadores[indicadorid].acumulador === 'sum' ">∑</span>
-																<span ng-show="indicadores[indicadorid].acumulador === 'mean' ">x&#772;</span>
-																<span ng-show="indicadores[indicadorid].acumulador === 'min' ">&#8863;</span>
-																<span ng-show="indicadores[indicadorid].acumulador === 'max' ">&#8862;</span>
-																= {{ indicadores[indicadorid].valores[aanualidad][v] | number:($root.isInt(indicadores[indicadorid].valores[aanualidad][v]) ? 0 : 2)   }}
-															</span>
+															<div ng-show="W_Indicador">
+																<input ng-hide="$index == indicadores[indicadorid].valores[aanualidad].length - 1" ng-blur="updateIndicador(indicadorid)" type="text" style="width:3em; font-size:smaller; padding:1px; min-width:100%" class="text-right form-control" ng-model="indicadores[indicadorid].valores[aanualidad][v]" />
+																<span ng-if="$index == indicadores[indicadorid].valores[aanualidad].length - 1">
+																	<span ng-show="indicadores[indicadorid].acumulador === 'sum' ">∑</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'mean' ">x&#772;</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'min' ">&#8863;</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'max' ">&#8862;</span>
+																	= {{ indicadores[indicadorid].valores[aanualidad][v] | number:($root.isInt(indicadores[indicadorid].valores[aanualidad][v]) ? 0 : 2)   }}
+																</span>
+															</div>
+															<div class="text-right" ng-show="!W_Indicador && R_Indicador">
+																<span ng-if="$index == indicadores[indicadorid].valores[aanualidad].length - 1">
+																	<span ng-show="indicadores[indicadorid].acumulador === 'sum' ">∑</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'mean' ">x&#772;</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'min' ">&#8863;</span>
+																	<span ng-show="indicadores[indicadorid].acumulador === 'max' ">&#8862;</span>
+																	= {{ indicadores[indicadorid].valores[aanualidad][v] | number:($root.isInt(indicadores[indicadorid].valores[aanualidad][v]) ? 0 : 2)   }}
+																</span>
+															</div>
 														</td>
 													</tr>
 													<tr ng-repeat-end ng-show="indicadores[indicadorid].desplegado">
